--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@supabase/supabase-js": "^1.29.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -43,6 +42,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "postcss": "^7.0.39",
     "prettier": "^2.4.1",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "@testing-library/user-event": "^13.0.0"
   }
 }
